@@ -1,0 +1,16 @@
+POST https://wwwcie.ups.com/ups.app/xml/ShipAccept
+
+<?xml version='1.0' standalone='yes'?>
+<ShipmentAcceptRequest>
+  <Request>
+    <RequestAction>ShipAccept</RequestAction>
+    <TransactionReference>
+      <CustomerContext>Net::Async::Webservice::UPS</CustomerContext>
+      <XpciVersion>0</XpciVersion>
+    </TransactionReference>
+  </Request>
+  <ShipmentDigest>somedigest</ShipmentDigest>
+</ShipmentAcceptRequest>
+
+<?xml version="1.0"?>
+<ShipmentAcceptResponse><Response><TransactionReference><CustomerContext>Net::Async::Webservice::UPS</CustomerContext><XpciVersion>0</XpciVersion></TransactionReference><ResponseStatusCode>1</ResponseStatusCode><ResponseStatusDescription>Success</ResponseStatusDescription></Response><ShipmentResults><ShipmentCharges><TransportationCharges><CurrencyCode>USD</CurrencyCode><MonetaryValue>7.35</MonetaryValue></TransportationCharges><ServiceOptionsCharges><CurrencyCode>USD</CurrencyCode><MonetaryValue>0.00</MonetaryValue></ServiceOptionsCharges><TotalCharges><CurrencyCode>USD</CurrencyCode><MonetaryValue>7.35</MonetaryValue></TotalCharges></ShipmentCharges><BillingWeight><UnitOfMeasurement><Code>LBS</Code><Description>Pounds</Description></UnitOfMeasurement><Weight>1.0</Weight></BillingWeight><ShipmentIdentificationNumber>123456</ShipmentIdentificationNumber><PackageResults><TrackingNumber>123456</TrackingNumber><ServiceOptionsCharges><CurrencyCode>USD</CurrencyCode><MonetaryValue>0.00</MonetaryValue></ServiceOptionsCharges><LabelImage><LabelImageFormat><Code>EPL</Code></LabelImageFormat><GraphicImage>STgsQSwwMDEKSTgsQSwwMDEKT0QKcTc5NQpRMTYwMCwyNApTMgpEMTAKSkYKTgpaVApiMTMsNDI5LE0sIjAwMyw4NDAsMTAwMTksMDAwMCxbKT4eMDEdOTYxWjk4NjU4MjcwHVVQU04dWDI0NzdYHjA3UB1LRixMWFEkVCscKldZQTJIHCYvJ1YnVyw0QlwiL1MwJENLNE8tVTlLWkxQXA0eBCIKQTE3LDcsMCwyLDEsMSxOLCJURVNUIFNISVBQRVIiCkExNywyNCwwLDIsMSwxLE4sIjIyMzEgRSBTVEFURSBST1VURSA3OCIKQTE3LDQxLDAsMiwxLDEsTiwiRUFTVCBMQU5TSU5HICBNSSA0ODgyMyIKQTYyLDE2NCwwLDQsMSwxLE4sIlRFU1QgQ09OVEFDVCBDT01QQU5ZIgpBNjIsMTkyLDAsNCwxLDEsTiwiMjMzIFcgNDlUSCBTVCIKQTYyLDIyMywwLDMsMiwyLE4sIk5FVyBZT1JLICBOWSAxMDAxOSIKQTM5MSw4LDAsMywxLDIsTiwiMSBMQlMgIgpBNjY4LDEzLDAsNCwxLDEsTiwiIDEgT0YgMSIKQTUxNCw1NCwwLDMsMSwxLE4sIkRXVDogMzQsMjQsMiIKQTYzNyw2NzEsMCw0LDMsNCxOLCIgICAiCkxPNjg4LDY0OSwxMjQsMTI1CkIzMDQsNTIzLDAsMSwzLDMsMTA3LE4sIjQyMDEwMDE5IgpBMjk5LDQzOSwwLDQsMiwzLE4sIk5ZIDEwMCA5LTI5IgpBMTIsNjcyLDAsMywyLDIsTiwiVVBTIEdST1VORCIKQTEyLDcyOSwwLDQsMSwxLE4sIlRSQUNLSU5HICM6IDFaIFgyNCA3N1ggMDMgOTg2NSA4MjcwIgpMTzAsNzc0LDgxMiw0CkE4MTEsMTAzOCwwLDMsMSwxLE4sIiAiCkExMiwxMDM0LDAsMywxLDEsTiwiQklMTElORzogIgpBMTM5LDEwMzQsMCwzLDEsMSxOLCJQL1AgIgpBMTcsMTM0LDAsNCwxLDEsTiwiU0hJUCBUTzogIgpMTzAsNjQ3LDgxMCwxNApMTzAsMTAxMiw4MTIsMTQKTE8wLDQyMyw4MTIsNApMTzI0Myw0MjMsNCwyMjQKQTIyOSwxMTk1LDAsMSwxLDEsTiwiWE9MIDE0LjA3LjI0ICAgICAgICAgIE5WNDUgNTQuMEEgMDcvMjAxNCIKQjEwNiw3OTEsMCwxLDMsMywyMDgsTiwiMVpYMjQ3N1gwMzk4NjU4MjcwIgpBMjgxLDgzNSwwLDQsMyw0LE4sIlNBTVBMRSIKR1c2MjksMTE1NywyMCw0NQoAAAAAAAAAAAAAAAAAAAAD/////wAAAAAAAAAAAAAAAAAAAAP/////AAAAAAAAAAAAAAAAAAAAA/////8AAAAAAAAAAAAAAAAAAAAD/////w/////////w/////////8P/////D/////////B/////////w/////8P//////wf8H+D///////D/////w//////8AfwfgD//////8P/////D//////gAfB4AH//////w/////8P/////+AA8HAAP//////D/////w//////wABwYAAf/////8P/////D//////B8BBAeB//////w/////8P/////8H8EIH8H//////D/////w//////wP4AA/gf/////8P/////D//////g/wAH+D//////w/////8P/////+A/AA/gP//////D/////w//////8B+AD4B//////8P/////D//////4A8AeAP//////w/////8P//////wAAAAB///////D/////w///////wAAAAf//////8P/////AAAAAAAAAAAAAAAAAAAAA/////8AAAAAAAAAAAAAAAAAAAAD/////wAAAAAAAAAAAAAAAAAAAAP/////AAAAAAAAAAAAAAAAAAAAA/////8AAAAAAAAAAAAAAAAAAAAD/////w////////AAAP///////8P/////D///////4DBAP///////w/////8P///////AcHAf///////D/////w///////wDweAf//////8P/////D//////+A/B+B///////w/////8P//////gH8H8B///////D/////w//////8B/wf8B//////8P/////D//////AP/B/4D//////w/////8P/////8B/8H/wH//////CAB8f/w//////wf/wf/wf/////8PHDh//D//////z//B//j//////w8cOH/8P////////8H/////////Dxw4f/w/////////wf////////8PHBB//D/////////B/////////w8ckn/8P////////8H/////////DxySf/w/////////wf////////8PHIJ//AAAAAAAAAAAAAAAAAAAAA8cxn/8AAAAAAAAAAAAAAAAAAAADxzGf/wAAAAAAAAAAAAAAAAAAAAP/////AAAAAAAAAAAAAAAAAAAAB/////9QMQoK</GraphicImage></LabelImage></PackageResults></ShipmentResults></ShipmentAcceptResponse>
