@@ -1,4 +1,6 @@
 {{$NEXT}}
+ - fix RT #98933, you can now book a shipment with 1 package
+ - nicer fix for RT #98219
 
 1.0.5     2014-09-08 16:09:04+01:00 Europe/London
  - the ::Response::PackageResult objects in a
